<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/contact_details_extra_padding_bottom"
    android:background="@color/contactCardBackgroundColor">

    <RelativeLayout
        android:id="@+id/toolbar_contact_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/contact_toolbar_elevation"
        android:background="@color/colorPickerDeepOrange"
        android:padding="@dimen/toolbar_contact_details_padding">

        <TextView
            android:id="@+id/toolbar_contact_details_company_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_company"
            android:paddingEnd="@dimen/toolbar_label_padding"
            android:paddingStart="0dp"
            style="@style/AppTheme.Base.ActivityTitle"
            android:textColor="@color/contactDetailsTitleColor"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/update_contact_btn"/>

        <Button
            android:id="@+id/delete_contact_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_menu_delete_white"
            android:layout_gravity="end"
            style="?android:attr/borderlessButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/update_contact_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_mode_edit_white"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_toStartOf="@id/delete_contact_btn"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contact_details_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/contact_details_padding">

        <TextView
            android:id="@+id/contact_details_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/hint_name"
            android:drawableStart="@drawable/ic_contact_person_grey"
            android:drawablePadding="@dimen/contact_form_icons_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:paddingBottom="@dimen/contact_details_vertical_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/contact_details_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/contact_details_name_tv"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/details_call_contact_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_details_action_call"
                android:textSize="@dimen/contact_details_actions_text_size"
                android:textColor="@color/colorAccent"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_contact_mobile_active"
                android:layout_margin="@dimen/contact_details_action_margin"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/details_mail_contact_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_details_action_email"
                android:textSize="@dimen/contact_details_actions_text_size"
                android:textColor="@color/colorAccent"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_contact_email_active"
                android:layout_margin="@dimen/contact_details_action_margin"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

        <TextView
            android:id="@+id/contact_details_email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:drawableStart="@drawable/ic_contact_email_grey"
            android:drawablePadding="@dimen/contact_form_icons_padding"
            android:textSize="@dimen/contact_details_text_size"
            android:paddingBottom="@dimen/contact_details_vertical_padding"
            app:layout_constraintTop_toBottomOf="@id/contact_details_actions"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/contact_details_mobile_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_phone"
            android:drawableStart="@drawable/ic_contact_mobile_grey"
            android:drawablePadding="@dimen/contact_form_icons_padding"
            android:textSize="@dimen/contact_details_text_size"
            android:paddingBottom="@dimen/contact_details_vertical_padding"
            app:layout_constraintTop_toBottomOf="@id/contact_details_email_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/contact_details_comment_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_comment"
            android:drawableStart="@drawable/ic_contact_comment_grey"
            android:drawablePadding="@dimen/contact_form_icons_padding"
            android:textSize="@dimen/contact_details_text_size"
            app:layout_constraintTop_toBottomOf="@id/contact_details_mobile_tv"
            app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.widget.LinearLayout>