<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_contact_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardBackground"
    android:fitsSystemWindows="true"
    tools:context="dev.danielholmberg.improve.Activities.AddContactActivity">

    <include
        android:id="@+id/include_toolbar_add_contact"
        layout="@layout/app_bar_add_contact" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contact_form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/contact_form_padding">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/contact_form_padding">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:backgroundTint="@color/editTextTint"
                    android:drawableStart="@drawable/ic_contact_person_grey"
                    android:drawablePadding="@dimen/contact_form_icons_padding"
                    android:hint="@string/hint_name" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/contact_form_padding">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:backgroundTint="@color/editTextTint"
                    android:drawableStart="@drawable/ic_contact_company_grey"
                    android:drawablePadding="@dimen/contact_form_icons_padding"
                    android:hint="@string/hint_company"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/contact_form_padding">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/editTextTint"
                    android:drawableStart="@drawable/ic_contact_email_grey"
                    android:drawablePadding="@dimen/contact_form_icons_padding"
                    android:hint="@string/hint_email"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/contact_form_padding">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:backgroundTint="@color/editTextTint"
                    android:drawableStart="@drawable/ic_contact_mobile_grey"
                    android:drawablePadding="@dimen/contact_form_icons_padding"
                    android:hint="@string/hint_phone"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/contact_form_padding">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5"
                    android:isScrollContainer="true"
                    android:scrollbars="vertical"
                    android:backgroundTint="@color/editTextTint"
                    android:drawableStart="@drawable/ic_contact_comment_grey"
                    android:drawablePadding="@dimen/contact_form_icons_padding"
                    android:hint="@string/hint_comment"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>