<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_fragment_contacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/contacts_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/empty_contact_list_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empty_contact_list_text"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingTop="64dp"
            android:textSize="28sp"
            android:textColor="@color/emptyListTextColor"
            android:gravity="center_horizontal"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/company_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingTop="@dimen/note_list_padding"
            android:paddingStart="@dimen/note_list_padding"
            android:paddingEnd="@dimen/note_list_padding"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            android:overScrollMode="always"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/add_company_fab_text"
            android:visibility="gone"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/fab_text_padding_horizontal"
            android:paddingTop="@dimen/fab_text_padding_horizontal"
            android:paddingStart="@dimen/fab_text_padding_vertical"
            android:paddingEnd="@dimen/fab_text_padding_vertical"
            android:text="@string/fab_company_text"
            android:textColor="@color/fabTextColor"
            android:background="@drawable/background_fab_text"
            android:layout_marginEnd="80dp"
            app:layout_anchor="@id/add_company"
            app:layout_anchorGravity="center_vertical"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_company"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_gravity="bottom|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_fab_add_company_white" />

        <TextView
            android:id="@+id/add_contact_fab_text"
            android:visibility="gone"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/fab_text_padding_horizontal"
            android:paddingTop="@dimen/fab_text_padding_horizontal"
            android:paddingStart="@dimen/fab_text_padding_vertical"
            android:paddingEnd="@dimen/fab_text_padding_vertical"
            android:text="@string/fab_contact_text"
            android:textColor="@color/fabTextColor"
            android:background="@drawable/background_fab_text"
            android:layout_marginEnd="80dp"
            app:layout_anchor="@id/add_contact"
            app:layout_anchorGravity="center_vertical"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_contact"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_fab_add_contact_white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_menu"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_fab_add_white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- Bottom sheet for contact details -->
    <include layout="@layout/fragment_contact_details"/>

</LinearLayout>